--- a/Sem4/TS/List3/Generating/generate-graph.cabal
+++ b/Sem4/TS/List3/Generating/generate-graph.cabal
@@ -5,8 +5,9 @@ build-type:          Simple
 
 executable generate-graph
     main-is:            Main.hs
-    build-depends:      base >=4.7 && <5
-                      , aeson >= 2.0.0
-                      , bytestring >= 0.10
+    build-depends:      base
+                      , aeson
+                      , bytestring
+                      , random
     hs-source-dirs:     src
     default-language:   Haskell2010
