--- a/Sem4/TS/List3/Generating/generate-graph.cabal
+++ b/Sem4/TS/List3/Generating/generate-graph.cabal
@@ -9,5 +9,6 @@ executable generate-graph
                       , aeson
                       , bytestring
                       , random
+                      , containers
     hs-source-dirs:     src
     default-language:   Haskell2010
