additional code snippets

--- a/Erasmus/CC/List1/spl/pom.xml
+++ b/Erasmus/CC/List1/spl/pom.xml
@@ -22,7 +22,7 @@
                 <configuration>
                     <mainClass>spl.Spl</mainClass>
                     <arguments>
-                        <argument>snippets/file.spl</argument>
+                        <argument>snippets/sample-errors.spl</argument>
                     </arguments>
                 </configuration>
             </plugin>
